compiler/syntax/parser.rs
//! The syntactic analyzer (parser).
//!
//! It is a handwritten top-down recursive-descent parser with arbitrary look-ahead
//! and backtracking. Backtracking is only used to parse expressions and patterns.
//!
//! # Grammar Notation
//!
//! Most parsing functions in this module are accompanied by a grammar snippet.
//! These snippets are written in an EBNF explained below:
//!
//! | Notation  | Name                                | Definition or Remark                                          |
//! |-----------|-------------------------------------|---------------------------------------------------------------|
//! | `; C`     | Comment                             | Stretches until the end of the line                           |
//! | `N ::= R` | Definition                          | Defines non-terminal `A` by rule `R`                          |
//! | `A B`     | Sequence                            | Rule `B` immediately followed by rule `A` modulo lexed tokens |
//! | `(A)`     | Grouping                            | To escape default precedence                                  |
//! | <code>A &vert; B</code>   | Ordered Alternative                 | Either `A` or `B` first trying `A` then `B`                   |
//! | `A?`      | Option                              | `A` or nothing (ε)                                            |
//! | `A*`      | Kleene Star (Multiplicity)          | Arbitrarily long sequence of `A`s                             |
//! | `A+`      | Kleene Plus (Positive Multiplicity) | Arbitrarily long non-empty sequence of `A`s                   |
//! | `"T"`     | Terminal                            | Lexed token by textual content                                |
//! | `#T`      | Named Terminal                      | Lexed token by name                                           |
//! | `(> A)`   | Positive Look-Ahead                 |                                                               |
//! | `(< A)`   | Positive Look-Behind                |                                                               |

#[allow(clippy::wildcard_imports)]
use super::{
    ast::{
        self, Attribute, AttributeArgument, AttributeArgumentKind, AttributeKind, Attributes,
        BindStatement, Declaration, Domain,
        Explicitness::{self, Explicit, Implicit},
        Expression, Identifier, LetStatement, Parameter, ParameterKind, Parameters, Path, Pattern,
        SpannedExplicitness, Statement, UsePathTree, UsePathTreeKind,
    },
    token::{
        Token,
        TokenName::{self, *},
    },
    Word,
};
use crate::{
    diagnostics::{reporter::ErasedReportedError, Code, Diagnostic},
    error::Result,
    session::BuildSession,
    span::{SourceFileIndex, Span, Spanned, Spanning},
    utility::{Conjunction, ListingExt, SmallVec},
};
use std::{any::TypeId, default::default};

#[cfg(test)]
mod test;

const STANDARD_DECLARATION_DELIMITERS: [Delimiter; 3] = {
    use Delimiter::*;

    [Terminator, TypeAnnotationPrefix, DefinitionPrefix]
};

const BRACKET_POTENTIAL_PI_TYPE_LITERAL: &str =
    "add round brackets around the potential pi type literal to disambiguate the expression";

/// Parse the file of a root module / component root.
pub fn parse_root_module_file(
    tokens: &[Token],
    file: SourceFileIndex,
    session: &BuildSession,
) -> Result<Declaration> {
    // @Beacon @Task don't unwrap to_str here but handle the error correctly
    // (create another parsing function on ComponentName)
    let name = session.shared_map()[file]
        .path()
        .unwrap()
        .file_stem()
        .unwrap()
        .to_str()
        .unwrap()
        .to_owned();

    let binder = Spanned::new(
        default(),
        Word::parse(name.clone()).map_err(|_| {
            // @Beacon @Task add component+packagename(+path?) and other details/explanations
            // @Question is the common code justified?
            Diagnostic::error()
                .code(Code::E036)
                .message(format!(
                    "the name of the root module `{name}` is not a valid word"
                ))
                .report(session.reporter())
        })?,
    )
    .into();

    parse_module_file(tokens, file, binder, session)
}

/// Parse the file of a root module or an out-of-line module.
pub(crate) fn parse_module_file(
    tokens: &[Token],
    file: SourceFileIndex,
    binder: Identifier,
    session: &BuildSession,
) -> Result<Declaration> {
    Parser::new(tokens, file, session).parse_top_level(binder)
}

pub(super) fn parse_path(
    tokens: &[Token],
    file: SourceFileIndex,
    session: &BuildSession,
) -> Result<Path> {
    Parser::new(tokens, file, session).parse_path()
}

/// The state of the parser.
// @Beacon @Beacon @Beacon @Task create stripped down version of the Parser
// that does not have `map` and `file` (naming?) and move all parsing methods that don't
// need those files to it
struct Parser<'a> {
    tokens: &'a [Token],
    file: SourceFileIndex,
    look_ahead: u16,
    index: usize,
    session: &'a BuildSession,
}

impl<'a> Parser<'a> {
    fn new(tokens: &'a [Token], file: SourceFileIndex, session: &'a BuildSession) -> Self {
        Self {
            tokens,
            file,
            look_ahead: 0,
            index: 0,
            session,
        }
    }

    /// Execute the given parser and backtrack to the original position on error without emitting a diagnostic.
    fn parse_or_backtrack<T>(&mut self, parser: impl FnOnce(&mut Self) -> Result<T>) -> Result<T> {
        let index = self.index;
        let result = self.look_ahead(parser);

        if result.is_err() {
            self.index = index;
        }

        result
    }

    fn look_ahead<T>(&mut self, parser: impl FnOnce(&mut Self) -> T) -> T {
        self.look_ahead += 1;
        let result = parser(self);
        self.look_ahead -= 1;
        result
    }

    fn is_looking_ahead(&self) -> bool {
        self.look_ahead != 0
    }

    fn error<T, D: FnOnce() -> Diagnostic>(&self, diagnostic: D) -> Result<T> {
        fn error<D: FnOnce() -> Diagnostic>(parser: &Parser<'_>, diagnostic: D) -> Result<!> {
            if !parser.is_looking_ahead() {
                diagnostic().report(parser.session.reporter());
            }

            // @Note I am not really happy with this: if we are not "looking ahead", we won't actually
            // emit an error @Task smh change the error type to reflect the semantics
            Err(ErasedReportedError::new_unchecked())
        }

        error(self, diagnostic).map(|okay| okay)
    }

    fn expect(&self, expected: TokenName) -> Result<Token> {
        let token = self.current_token();
        if token.name() == expected {
            Ok(token.clone())
        } else {
            self.error(|| Expected::Token(expected).but_actual_is(token))
        }
    }

    // @Note horrible name
    fn expect_among_others(&self, expected: TokenName, other_expected: Expected) -> Result<Token> {
        let token = self.current_token();
        if token.name() == expected {
            Ok(token.clone())
        } else {
            self.error(|| other_expected.added(expected).but_actual_is(token))
        }
    }

    fn consume(&mut self, token: TokenName) -> Result<Token> {
        let token = self.expect(token)?;
        self.advance();
        Ok(token)
    }

    // @Note bad name
    fn consume_after_expecting(
        &mut self,
        token: TokenName,
        other_expected: Expected,
    ) -> Result<Token> {
        let token = self.expect_among_others(token, other_expected)?;
        self.advance();
        Ok(token)
    }

    fn consume_word(&mut self) -> Result<Identifier> {
        self.consume(Word)
            .map(|identifier| identifier.try_into().unwrap())
    }

    /// Consume an identifier.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Identifier ::= #Word | #Punctuation
    /// ```
    fn consume_identifier(&mut self) -> Result<Identifier> {
        match self.current_token().name() {
            Word | Punctuation => {
                let identifier = self.current_token_into_identifier();
                self.advance();
                Ok(identifier)
            }
            _ => self.error(|| Expected::Identifier.but_actual_is(self.current_token())),
        }
    }

    /// Indicate whether the given token was consumed.
    ///
    /// Conceptually equivalent to `self.look_ahead(|this| this.consume(..)).is_ok()`
    /// but more memory-efficient as it does not clone the consumed token.
    #[must_use]
    fn has_consumed(&mut self, token: TokenName) -> bool {
        if self.current_token().name() == token {
            self.advance();
            true
        } else {
            false
        }
    }

    /// Conceptually equivalent to `Self::consume(..).map(Spanning::span).ok()`.
    ///
    /// However, it is more memory-efficient as it neither constructs a [`Diagnostic`]
    /// nor clones the consumed token.
    fn consume_span(&mut self, token: TokenName) -> Option<Span> {
        if self.current_token().name() == token {
            let span = self.current_token().span;
            self.advance();
            Some(span)
        } else {
            None
        }
    }

    /// Try to turn the current token into an identifier.
    ///
    /// May panic if the token is neither an identifier nor punctuation.
    fn current_token_into_identifier(&self) -> Identifier {
        self.current_token().clone().try_into().unwrap()
    }

    /// Step to the next token output by the lexer.
    fn advance(&mut self) {
        self.index += 1;
    }

    /// Inspect the current token.
    fn current_token(&self) -> &Token {
        &self.tokens[self.index]
    }

    /// Indicate whether the current token is one of the given delimiters.
    fn current_token_is_delimiter(&self, delimiters: &[Delimiter]) -> bool {
        let token = self.current_token().name();
        delimiters.iter().any(|delimiter| delimiter.matches(token))
    }

    /// Inspect the token following the current one.
    ///
    /// # Panics
    ///
    /// Panics if the current token is the [end of input](EndOfInput).
    fn succeeding_token(&self) -> &Token {
        &self.tokens[self.index + 1]
    }

    fn preceeding_token(&self) -> Option<&Token> {
        Some(&self.tokens[self.index.checked_sub(1)?])
    }

    /// Parse a declaration.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Declaration ::= (Attribute #Line-Break*)* Bare-Declaration
    /// Bare-Declaration ::=
    ///     | Function-Declaration
    ///     | Data-Declaration
    ///     | Module-Declaration
    ///     | Use-Declaration
    /// ```
    // @Task re-add attribute groups (needs syntax proposals)
    fn parse_declaration(&mut self) -> Result<Declaration> {
        let attributes = self.parse_attributes(SkipLineBreaks::Yes)?;

        let span = self.current_token().span;
        match self.current_token().name() {
            Word => {
                let identifier = self.current_token_into_identifier();
                self.advance();
                self.finish_parse_function_declaration(identifier, attributes)
            }
            Data => {
                self.advance();
                self.finish_parse_data_declaration(span, attributes)
            }
            Module => {
                self.advance();
                self.finish_parse_module_declaration(span, attributes)
            }
            Use => {
                self.advance();
                self.finish_parse_use_declaration(span, attributes)
            }
            _ => self.error(|| Expected::Declaration.but_actual_is(self.current_token())),
        }
    }

    /// Parse attributes.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Attribute ::= Regular-Attribute | Documentation-Comment
    /// ```
    fn parse_attributes(&mut self, skip_line_breaks: SkipLineBreaks) -> Result<Attributes> {
        let mut attributes = Attributes::default();

        loop {
            let span = self.current_token().span;
            attributes.push(match self.current_token().name() {
                At => {
                    self.advance();
                    let attribute = self.finish_parse_regular_attribute(span)?;
                    if skip_line_breaks == SkipLineBreaks::Yes {
                        while self.has_consumed(Semicolon) {}
                    }
                    attribute
                }
                DocumentationComment => {
                    self.advance();
                    if skip_line_breaks == SkipLineBreaks::Yes {
                        while self.has_consumed(Semicolon) {}
                    }
                    Attribute::new(span, AttributeKind::Documentation)
                }
                _ => break,
            });
        }

        Ok(attributes)
    }

    /// Finish parsing a regular attribute given the span of the already parsed leading `@`.
    ///
    /// # Grammar
    ///
    /// Note: The grammar is not complete yet since we cannot represent the
    /// arguments of `@if` yet which are the most complex.
    ///
    /// ```ebnf
    /// Regular-Attribute ::= "@" (#Word | "(" #Word Attribute-Argument* ")")
    /// ```
    fn finish_parse_regular_attribute(&mut self, mut span: Span) -> Result<Attribute> {
        let binder;
        let mut arguments = SmallVec::new();

        match self.current_token().name() {
            Word => {
                binder = span.merging(self.current_token_into_identifier());
                self.advance();
            }
            OpeningRoundBracket => {
                self.advance();
                binder = self.consume_word()?;

                while self.current_token().name() != ClosingRoundBracket {
                    arguments.push(self.parse_attribute_argument()?);
                }

                // @Note constructs and wastes a diagnostic
                // @Task transform above while into a loop
                // @Beacon :while_current_not
                span.merging(self.consume(ClosingRoundBracket).unwrap());
            }
            _ => {
                return self.error(|| {
                    expected_one_of![Word, OpeningRoundBracket]
                        .but_actual_is(self.current_token())
                        .note("`@` introduces attributes")
                });
            }
        }

        Ok(Attribute::new(
            span,
            AttributeKind::Regular { binder, arguments },
        ))
    }

    /// Parse an argument of an attribute.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Attribute-Argument ::= Lower-Attribute-Argument | "(" #Word Lower-Attribute-Argument ")"
    /// Lower-Attribute-Argument ::= Path | #Number-Literal | #Text-Literal
    /// ```
    fn parse_attribute_argument(&mut self) -> Result<AttributeArgument> {
        Ok(match self.current_token().name() {
            name if name.is_path_head() => {
                let path = self.parse_path()?;

                AttributeArgument::new(path.span(), AttributeArgumentKind::Path(Box::new(path)))
            }
            NumberLiteral => {
                let token = self.current_token().clone();
                self.advance();

                AttributeArgument::new(
                    token.span,
                    AttributeArgumentKind::NumberLiteral(token.into_number_literal().unwrap()),
                )
            }
            TextLiteral => {
                let token = self.current_token().clone();
                self.advance();

                AttributeArgument::new(
                    token.span,
                    AttributeArgumentKind::TextLiteral(
                        token
                            .into_text_literal()
                            .unwrap()
                            .or_else(|error| self.error(|| error))?,
                    ),
                )
            }
            OpeningRoundBracket => {
                let mut span = self.current_token().span;
                self.advance();
                let binder = self.consume_word()?;
                let value = self.parse_attribute_argument()?;
                span.merging(&self.consume(ClosingRoundBracket)?);

                AttributeArgument::new(
                    span,
                    AttributeArgumentKind::Named(Box::new(ast::NamedAttributeArgument {
                        binder,
                        value,
                    })),
                )
            }
            _ => {
                return self
                    .error(|| Expected::AttributeArgument.but_actual_is(self.current_token()))
            }
        })
    }

    /// Finish parsing a function declaration given the already parsed leading word.
    ///
    /// The span does not include the terminator.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Function-Declaration ::=
    ///     #Word
    ///     Parameters Type-Annotation?
    ///     ("=" Expression)?
    ///     Terminator
    /// ```
    fn finish_parse_function_declaration(
        &mut self,
        binder: Identifier,
        attributes: Attributes,
    ) -> Result<Declaration> {
        let mut span = binder.span();

        let parameters = span.merging(self.parse_parameters(&STANDARD_DECLARATION_DELIMITERS)?);
        let type_annotation = span.merging(self.parse_optional_type_annotation()?);

        let body = if self.has_consumed(Equals) {
            Some(span.merging(self.parse_expression()?))
        } else {
            None
        };

        self.expect_terminator()?;

        Ok(Declaration::new(
            attributes,
            span,
            ast::Function {
                binder,
                parameters,
                type_annotation,
                body,
            }
            .into(),
        ))
    }

    /// Finish parsing a data declaration given the span of the already parsed leading `data` keyword.
    ///
    /// The span does not include the terminator.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Data-Declaration ::=
    ///     "data" #Word
    ///     Parameters Type-Annotation?
    ///     ("of" ("{" (Terminator | Constructor)* "}")?)?
    ///     Terminator
    /// ```
    fn finish_parse_data_declaration(
        &mut self,
        mut span: Span,
        attributes: Attributes,
    ) -> Result<Declaration> {
        let binder = span.merging(self.consume_word()?);
        let parameters = span.merging(self.parse_parameters(&[
            Delimiter::Terminator,
            Delimiter::TypeAnnotationPrefix,
            Of.into(),
        ])?);
        let type_annotation = span.merging(self.parse_optional_type_annotation()?);

        let constructors = match self.current_token().name() {
            name if name.is_terminator() => {
                if name == Semicolon {
                    self.advance();
                }
                None
            }
            Of => {
                span.merging(self.current_token().span);
                self.advance();

                let mut constructors = Vec::new();

                self.parse_optional_block(|this| {
                    constructors.push(this.parse_constructor()?);
                    Ok(())
                })?;

                span.merging(constructors.last());
                self.expect_terminator()?;

                Some(constructors)
            }
            _ => {
                return self.error(|| {
                    expected_one_of![
                        Delimiter::Terminator,
                        Delimiter::DefinitionPrefix,
                        Expected::Expression
                    ]
                    .but_actual_is(self.current_token())
                });
            }
        };

        Ok(Declaration::new(
            attributes,
            span.merge(span),
            ast::Data {
                binder,
                parameters,
                type_annotation,
                constructors,
            }
            .into(),
        ))
    }

    /// Finish parsing module declaration given the span of the already parsed leading `module` keyword.
    ///
    /// This is either an inline or an out-of-line module declaration.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Module-Declaration ::=
    ///     | Header
    ///     | "module" #Word ("of" ("{" (Terminator | Declaration)* "}")?)? Terminator
    /// Header ::= "module" Terminator
    /// ```
    fn finish_parse_module_declaration(
        &mut self,
        mut span: Span,
        attributes: Attributes,
    ) -> Result<Declaration> {
        match self.current_token().name() {
            name if name.is_terminator() => {
                if name == Semicolon {
                    self.advance();
                }

                return Ok(Declaration::new(
                    attributes,
                    span,
                    ast::DeclarationKind::ModuleHeader,
                ));
            }
            _ => {}
        }

        let binder = span.merging(self.consume_word()?);

        match self.current_token().name() {
            // out-of-line module declaration
            name if name.is_terminator() => {
                if name == Semicolon {
                    self.advance();
                }

                Ok(Declaration::new(
                    attributes,
                    span,
                    ast::Module {
                        binder,
                        file: self.file,
                        declarations: None,
                    }
                    .into(),
                ))
            }
            Of => {
                self.advance();
                let mut declarations = Vec::new();

                self.parse_optional_block(|this| {
                    declarations.push(this.parse_declaration()?);
                    Ok(())
                })?;

                span.merging(self.expect_terminator()?);

                Ok(Declaration::new(
                    attributes,
                    span,
                    ast::Module {
                        binder,
                        file: self.file,
                        declarations: Some(declarations),
                    }
                    .into(),
                ))
            }
            _ => self.error(|| {
                expected_one_of![Delimiter::Terminator, Of].but_actual_is(self.current_token())
            }),
        }
    }

    /// Parse the "top level" aka the body of a module file given the module name.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Top-Level ::= (#Line-Break | Declaration)* #End-Of-Input
    /// ```
    fn parse_top_level(&mut self, module_binder: Identifier) -> Result<Declaration> {
        let mut declarations = Vec::new();

        loop {
            if self.has_consumed(Semicolon) {
                continue;
            }

            if self.has_consumed(EndOfInput) {
                break Ok(Declaration::new(
                    Attributes::new(),
                    self.session.shared_map()[self.file].span(),
                    ast::Module {
                        binder: module_binder,
                        file: self.file,
                        declarations: Some(declarations),
                    }
                    .into(),
                ));
            }

            declarations.push(self.parse_declaration()?);
        }
    }

    fn parse_optional_block(&mut self, mut parser: impl FnMut(&mut Self) -> Result) -> Result {
        if self.has_consumed(OpeningCurlyBracket) {
            loop {
                while self.has_consumed(Semicolon) {}

                if self.has_consumed(ClosingCurlyBracket) {
                    break;
                }

                parser(self)?;
            }
        }

        Ok(())
    }

    /// Finish parsing a use-declaration given the span of the already parsed leading `use` keyword.
    ///
    /// The span does not contain the trailing line break.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Use-Declaration ::= "use" Use-Path-Tree Terminator
    /// ```
    fn finish_parse_use_declaration(
        &mut self,
        span: Span,
        attributes: Attributes,
    ) -> Result<Declaration> {
        let bindings = self.parse_use_path_tree(&[Delimiter::Terminator])?;
        self.expect_terminator()?;

        Ok(Declaration::new(
            attributes,
            span.merge(&bindings),
            ast::Use { bindings }.into(),
        ))
    }

    /// Parse a use-path tree.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Use-Path-Tree ::=
    ///     | Path
    ///     | Path "." "(" (Use-Path-Tree | "(" Renaming ")")* ")"
    ///     | Renaming
    /// Renaming ::= Path "as" Identifier
    /// ```
    // @Task rewrite this following a simpler grammar mirroring expression applications
    fn parse_use_path_tree(&mut self, delimiters: &[Delimiter]) -> Result<UsePathTree> {
        let mut path = self.parse_first_path_segment()?;

        while self.has_consumed(Dot) {
            match self.current_token().name() {
                Word | Punctuation => {
                    let identifier = self.current_token_into_identifier();
                    self.advance();
                    path.segments.push(identifier);
                }
                OpeningRoundBracket => {
                    let mut span = self.current_token().span;
                    self.advance();

                    let mut bindings = Vec::new();

                    while self.current_token().name() != ClosingRoundBracket {
                        if let Ok(bracket) =
                            self.look_ahead(|this| this.consume(OpeningRoundBracket))
                        {
                            let mut span = bracket.span;

                            let target = self.parse_path()?;
                            self.consume(As)?;
                            let binder = self.consume_identifier()?;
                            span.merging(&self.consume(ClosingRoundBracket)?);

                            bindings.push(UsePathTree::new(
                                span,
                                UsePathTreeKind::Single {
                                    target,
                                    binder: Some(binder),
                                },
                            ));
                        } else {
                            // @Note @Bug this is really really fragile=non-extensible!
                            bindings.push(self.parse_use_path_tree(&[
                                OpeningRoundBracket.into(),
                                ClosingRoundBracket.into(),
                                // @Question Expected::Identifier?
                                Word.into(),
                                Punctuation.into(),
                                Self_.into(),
                                Super.into(),
                                Topmost.into(),
                            ])?);
                        }
                    }

                    // @Note constructs and wastes a diagnostic
                    // @Task transform above while into a loop
                    // @Beacon :while_current_not
                    span.merging(&self.consume(ClosingRoundBracket).unwrap());

                    return Ok(UsePathTree::new(
                        path.span().merge(span),
                        UsePathTreeKind::Multiple { path, bindings },
                    ));
                }
                _ => {
                    return self.error(|| {
                        expected_one_of![Expected::Identifier, OpeningRoundBracket]
                            .but_actual_is(self.current_token())
                    });
                }
            }
        }

        // @Question is there a grammar transformation to a self-contained construct
        // instead of a delimited one?
        let binder = if self.current_token_is_delimiter(delimiters) {
            None
        } else if self.has_consumed(As) {
            self.current_token();
            Some(self.consume_identifier()?)
        } else {
            return self.error(|| {
                delimiters_with_expected(delimiters, Some(As.into()))
                    .but_actual_is(self.current_token())
            });
        };

        Ok(UsePathTree::new(
            path.span().merge(&binder),
            UsePathTreeKind::Single {
                target: path,
                binder,
            },
        ))
    }

    /// Parse a (non-type) constructor.
    ///
    /// The span does not include the trailing line break.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Constructor ::=
    ///     (Attribute #Line-Break*)*
    ///     #Word Parameters Type-Annotation?
    ///     ("=" Expression)?
    ///     Terminator
    /// ```
    fn parse_constructor(&mut self) -> Result<Declaration> {
        let attributes = self.parse_attributes(SkipLineBreaks::Yes)?;

        let binder = self.consume_word()?;
        let mut span = binder.span();

        let parameters = span.merging(self.parse_parameters(&STANDARD_DECLARATION_DELIMITERS)?);

        let type_annotation = span.merging(self.parse_optional_type_annotation()?);

        let body = if self.has_consumed(Equals) {
            Some(span.merging(self.parse_expression()?))
        } else {
            None
        };

        self.expect_terminator()?;

        Ok(Declaration::new(
            attributes,
            span,
            ast::Constructor {
                binder,
                parameters,
                type_annotation,
                body,
            }
            .into(),
        ))
    }

    /// Parse an expression.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Expression ::= Pi-Type-Literal-Or-Lower
    /// ```
    // @Task parse sigma type literals
    // @Task once that has been completed, inline Self::parse_pi_type_literal_or_lower
    fn parse_expression(&mut self) -> Result<Expression> {
        self.parse_pi_type_literal_or_lower()
    }

    /// Parse a pi-type literal or a lower expression.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// ; among other things, the grammar for pretty-printers differs from the one for parsers
    /// ; in that `Pi-Type-Literal-Or-Lower` also includes several complex (in the sense that they
    /// ; contain further expressions) `Lower-Expression`s namely let/in, use/in, lambda literals,
    /// ; case analyses and do blocks (not sure about sequence literals)
    /// Pi-Type-Literal-Or-Lower ::=
    ///     (Designated-Pi-Type-Domain | Application-Expression-Or-Lower)
    ///     "->" Pi-Type-Literal-Or-Lower
    /// Designated-Pi-Type-Domain ::= Explicitness "(" "lazy"? #Word Type-Annotation ")"
    /// ```
    fn parse_pi_type_literal_or_lower(&mut self) -> Result<Expression> {
        let domain = self
            .parse_or_backtrack(|this| {
                let explicitness = this.parse_optional_implicitness();
                let mut span = this
                    .consume(OpeningRoundBracket)?
                    .span
                    .merge_into(explicitness);

                let laziness = this.consume_span(Lazy);
                let binder = this.consume_word()?;
                // @Question should a failure be fatal here or should we keep backtracking?
                let domain = this.parse_type_annotation(ClosingRoundBracket.into())?;

                span.merging(&this.consume(ClosingRoundBracket)?);

                Ok(Spanned::new(
                    span,
                    Domain {
                        explicitness: explicitness.into(),
                        laziness,
                        binder: Some(binder),
                        expression: domain,
                    },
                ))
            })
            .or_else(|_| -> Result<_> {
                // @Question should we parse `lazy` here too to allow for unnamed laziness
                // which is reasonable?
                let domain = self.parse_application_expression_or_lower()?;
                Ok(Spanned::new(
                    domain.span,
                    Domain {
                        explicitness: Explicit,
                        laziness: None,
                        binder: None,
                        expression: domain,
                    },
                ))
            })?;

        if self.current_token().name() == ThinArrowRight {
            self.advance();

            let mut span = domain.span;
            let codomain = span.merging(self.parse_pi_type_literal_or_lower()?);

            Ok(Expression::new(
                Attributes::new(),
                span,
                ast::PiTypeLiteral {
                    domain: domain.value,
                    codomain,
                }
                .into(),
            ))
        }
        // the case where we don't actually have a pi type literal but merely
        // an application or lower
        else if domain.value.binder.is_none() {
            Ok(domain.value.expression)
        } else {
            self.error(|| {
                Expected::Token(ThinArrowRight)
                    .but_actual_is(self.current_token())
                    .labeled_secondary_span(domain, "start of a pi type literal")
            })
        }
    }

    /// Parse an application expression or lower.
    /// # Grammar
    ///
    /// ```ebnf
    /// Application-Expression-Or-Lower ::= Lower-Expression Expression-Argument*
    /// Expression-Argument ::=
    ///     | Explicitness Lower-Expression
    ///     | Explicitness "(" (#Word "=")? Expression ")"
    ///
    /// ; ; left-recursive version unsuitable for the recursive descent parser
    /// ; ; but indeed usable for pretty-printers:
    /// ;
    /// ; Application-Expression-Or-Lower ::= Application-Expression-Or-Lower? Expression-Argument*
    /// ; Expression-Argument ::=
    /// ;     | Lower-Expression
    /// ;     | Explicitness "(" (#Word "=")? Expression ")"
    /// ```
    fn parse_application_expression_or_lower(&mut self) -> Result<Expression> {
        self.parse_application_or_lower()
    }

    /// Parse a lower expression.
    ///
    /// # Grammar
    ///
    /// ```ebnf
    /// Lower-Expression ::= Attribute* Bare-Lower-Expression
    /// Bare-Lower-Expression ::= Lowest-Expression ("::" Identifier)*
    /// Lowest-Expression ::=
    ///     | "Type"
    ///     | #Number-Literal
    ///     | #Text-Literal
    ///     | Typed-Hole
    ///     | Let-In
    ///     | Use-In
    ///     | Lambda-Literal
    ///     | Case-Analysis
    ///     | Do-Block
    ///     | Sequence-Literal-Expression
    ///     | Path-Or-Namespaced-Literal-Expression
    ///     | "(" Expression ")"
    /// Typed-Hole ::= "?" #Word
    /// ```
    fn parse_lower_expression(&mut self) -> Result<Expression> {
        let attributes = self.parse_attributes(SkipLineBreaks::No)?;
